FIX: GK team limit = -1 not showing "BANNED" Made mobile more readable

--- a/style.css
+++ b/style.css
@@ -112,3 +112,9 @@ header .textbox {
   color: black;
 }
 
+@media only screen and (max-width: 1000px) {
+  body {
+    font-size: 24px;
+  }
+}
+
